--- a/index.css
+++ b/index.css
@@ -165,6 +165,21 @@ body {
     border: 1px solid white;
     cursor: pointer;
 }
+.gameOverScreen {
+    position: absolute;
+    z-index: 50;
+    top: 0;
+    left: 0;
+    min-width: 60rem;
+    height: 40rem;
+    background-color: black;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0;
+    color: white;
+    justify-content: space-between;
+}
 
 a {
     color: blue;
